<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/visualizedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/visualized_route_button"
        app:layout_constraintBottom_toTopOf="@+id/dataButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.80"/>

    <Button
        android:id="@+id/dataButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/route_in_data_button"
        app:layout_constraintBottom_toTopOf="@+id/collisionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visualizedButton"
        app:layout_constraintWidth_percent="0.80"/>

    <Button
        android:id="@+id/collisionButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/collisionsButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataButton"
        app:layout_constraintWidth_percent="0.80"/>
</androidx.constraintlayout.widget.ConstraintLayout>