<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/remote_gradient">

    <ImageButton
        android:id="@+id/forwardButton"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:background="@drawable/button"
        android:contentDescription="@string/arrow_pointing_upward"
        android:onClick="drive"
        app:layout_constraintBottom_toTopOf="@+id/reverseButton"
        app:layout_constraintEnd_toStartOf="@+id/turnRightButton"
        app:layout_constraintStart_toEndOf="@+id/turnLeftButton"
        app:layout_constraintTop_toTopOf="@+id/turnLeftButton"
        app:srcCompat="@drawable/ic_arrow_upward" />

    <ImageButton
        android:id="@+id/reverseButton"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:contentDescription="@string/arrow_pointing_downward"
        android:onClick="reverse"
        app:layout_constraintEnd_toStartOf="@+id/turnRightButton"
        app:layout_constraintStart_toEndOf="@+id/turnLeftButton"
        app:layout_constraintTop_toBottomOf="@+id/forwardButton"
        app:srcCompat="@drawable/ic_arrow_downward"
        android:background="@drawable/button"/>

    <ImageButton
        android:id="@+id/turnLeftButton"
        android:layout_width="64dp"
        android:layout_height="150dp"
        android:background="@drawable/remote_button_left"
        android:contentDescription="@string/arrow_pointing_to_the_left"
        android:onClick="turnLeft"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/turnRightButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_left" />

    <ImageButton
        android:id="@+id/turnRightButton"
        android:layout_width="64dp"
        android:layout_height="150dp"
        android:contentDescription="@string/arrow_pointing_to_the_right"
        android:onClick="turnRight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/turnLeftButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_right"
        android:background="@drawable/remote_button_right"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Stop"
        android:onClick="stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reverseButton"
        android:background="@drawable/button"/>


</androidx.constraintlayout.widget.ConstraintLayout>